--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <img src= "./images/linkedin.svg"
               </a> 
               <a href="https://github.com/GABRIEL7714">
-                <img src= "./images/gmail.svg"
+                <img src= "./images/github.svg"
               </a>
               <a href="https://www.instagram.com/walter.valdivia.124/">
                 <img src= "./images/instagram.svg"
