--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
           </div>
           <section class = "botones" id = "contacto">
               <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
-                <img src= "./images/linkedin.svg"
+                <img src= "./images/linkedin.svg">
               </a> 
-              <a href="https://github.com/GABRIEL7714">
-                <img src= "./images/github.svg"
+              <a href="https://github.com/GABRIEL7714" class="logito">
+                <img src= "./images/github.svg">
               </a>
               <a href="https://www.instagram.com/walter.valdivia.124/">
-                <img src= "./images/instagram.svg"
+                <img src= "./images/instagram.svg">
               </a> 
           </section>
              
