--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
                 <img src= "./images/linkedin.svg">
               </a> 
-              <a href="https://github.com/GABRIEL7714" class="logito">
+              <a href="https://github.com/GABRIEL7714">
                 <img src= "./images/github.svg">
               </a>
               <a href="https://www.instagram.com/walter.valdivia.124/">
