--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
           </div>
           <section class = "botones" id = "contacto">
               <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
-                <img src= "./images/linkedin.svg">
+                <svg class="icon icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg>
               </a> 
               <a href="https://github.com/GABRIEL7714">
-                <img src= "./images/github.svg">
+                github
               </a>
               <a href="https://www.instagram.com/walter.valdivia.124/">
-                <img src= "./images/instagram.svg">
+                instagram
               </a> 
           </section>
              
