--- a/index.html
+++ b/index.html
@@ -172,20 +172,17 @@
               
           </div>
           <section class = "botones" id = "contacto">
-              <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
-                <svg class="icon icon-linkedin">
-                    <use xlink:href="#icon-linkedin"></use>
-                 </svg>
-                  <symbol id="icon-linkedin" viewBox="0 0 32 32">
-                    <path d="M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM12 26h-4v-14h4v14zM10 10c-1.106 0-2-0.894-2-2s0.894-2 2-2c1.106 0 2 0.894 2 2s-0.894 2-2 2zM26 26h-4v-8c0-1.106-0.894-2-2-2s-2 0.894-2 2v8h-4v-14h4v2.481c0.825-1.131 2.087-2.481 3.5-2.481 2.488 0 4.5 2.238 4.5 5v9z"></path>
-                  </symbol>
-              </a> 
-              <a href="https://github.com/GABRIEL7714">
-                github
-              </a>
-              <a href="https://www.instagram.com/walter.valdivia.124/">
-                instagram
-              </a> 
+             </div class = "wrapper">
+                <a href="https://www.instagram.com/walter.valdivia.124/">
+                    <img src="./instagram.svg" class="wrapper2">
+                </a>
+                <a href="https://github.com/GABRIEL7714">
+                    <img src="./github.svg" class="wrapper2">
+                </a>
+                <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
+                    <img src="./linkedin.svg" class="wrapper2">
+                </a>
+            </div>
           </section>
              
 </body>
