--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
           <section class = "botones" id = "contacto">
              </div class = "wrapper">
                 <a href="https://www.instagram.com/walter.valdivia.124/">
-                    <img src="./instagram.svg" class="wrapper2">
+                    <img src="./images/instagram.svg" class="wrapper2">
                 </a>
                 <a href="https://github.com/GABRIEL7714">
-                    <img src="./github.svg" class="wrapper2">
+                    <img src="./images/github.svg" class="wrapper2">
                 </a>
                 <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
-                    <img src="./linkedin.svg" class="wrapper2">
+                    <img src="./images/linkedin.svg" class="wrapper2">
                 </a>
             </div>
           </section>
