--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               
           </div>
           <section class = "botones" id = "contacto">
-                <a href="https://www.instagram.com/walter.valdivia.124/">
+                <a href="https://www.instagram.com/walter.valdivia.124/" class="wrapper2">
                     <img src="./images/instagram.svg" class="wrapper2">
                 </a>
                 <a href="https://github.com/GABRIEL7714">
