--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </div>
           <section class = "botones" id = "contacto">
                 <a href="https://www.instagram.com/walter.valdivia.124/" class="wrapper2">
-                    <img src="./images/instagram.svg" class="wrapper2">
+                    <img src="./images/instagram.svg">
                 </a>
                 <a href="https://github.com/GABRIEL7714">
                     <img src="./images/github.svg" class="wrapper2">
