--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
               
           </div>
           <section class = "botones" id = "contacto">
-                <a href="https://www.instagram.com/walter.valdivia.124/" class="wrapper2">
+                <a href="https://www.instagram.com/walter.valdivia.124/">
                     <img src="./images/instagram.svg">
                 </a>
-                <a href="https://github.com/GABRIEL7714" class="wrapper2">
+                <a href="https://github.com/GABRIEL7714">
                     <img src="./images/github.svg">
                 </a>
-                <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe" class="wrapper2">
+                <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
                     <img src="./images/linkedin.svg" >
                 </a>
           </section>
