--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                     online de Platzi donde aprendería muchas temas propios de mi carrera estando aún en el colegio
                     A la edad de 16 años decidí que queria estudiar Ciencia de la Computación inspirado en las enseñanzas de mi hermano
                     y hoy en día curso el segundo semestre en la UCSP.
+                    <a href="https://www.facebook.com/conservatorio.dunckerlavalle/" class="cta">Conservatorio de Música Luis Duncker Lavalle</a>
+                    <a href="https://www.facebook.com/mercedsanpedropascual" class="cta">Colegio Mercedario San Pedro Pascual</a>
                     <a href="https://fopi.org.pe/" class="cta">Olimpiada Peruana de Informatica</a>
                     <a href="https://platzi.com/p/walterjoelvaldivia/" class="cta">Platzi</a>
 
