--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
                 <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
                     <img src="./images/linkedin.svg" class="wrapper2">
                 </a>
+                <a href="https://www.youtube.com/@waltergabrielvaldiviabejar4706">
+                    <img src="./images/youtube.svg" class="wrapper2">
+                </a>
           </section>
              
 </body>
