--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                 <a href="https://www.youtube.com/@waltergabrielvaldiviabejar4706">
                     <img src="./images/youtube.svg" class="wrapper2">
                 </a>
+                <a href="https://www.facebook.com/walter.valdivia.969">
+                    <img src="./images/facebook.svg" class="wrapper2">
+                </a>
           </section>
              
 </body>
