--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
                 <a href="https://www.facebook.com/walter.valdivia.969">
                     <img src="./images/facebook.svg" class="wrapper2">
                 </a>
+                <a href="https://twitter.com/WalterGabriel79">
+                    <img src="./images/twitter.svg" class="wrapper2">
+                </a>
           </section>
              
 </body>
