--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     <a href="https://www.facebook.com/mercedsanpedropascual" class="cta">Colegio Mercedario San Pedro Pascual</a>
                     <a href="https://fopi.org.pe/" class="cta">Olimpiada Peruana de Informatica</a>
                     <a href="https://platzi.com/p/walterjoelvaldivia/" class="cta">Platzi</a>
+                    <a href="https://cs.ucsp.edu.pe/" class="cta">CS-UCSP</a>
 
                 </p> 
             </div>
